tests/error/try_default_construct_non_default_constructible.bz
// error: type '*i32' is not default constructible
function test()
{
	let _ = (*i32)();
}
